fix: update navbar styles for improved visibility and consistency

--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,12 @@ body {
 }
 
 .hover-link:hover {
-  color: #f59a57;
+  color: #8ac44a;
   cursor: pointer;
 }
 
 .text-orange {
-  color: #f59a57;
+  color: #8ac44a;
 }
 
 .btn-custom {
@@ -19,7 +19,7 @@ body {
 }
 
 .sub-btn-custom {
-  background-color: #f59a57;
+  background-color: #8ac44a;
   color: #ffffff;
   border: none;
 }
@@ -173,11 +173,11 @@ body {
 }
 
 .footer-link-primary:hover {
-  color: #f59a57 !important;
+  color: #8ac44a !important;
 }
 
 .footer-logo {
-  width: 220px;
+  width: 20px;
   height: 80px;
 }
 
@@ -207,14 +207,14 @@ body {
 }
 .price-text {
   font-weight: bold;
-  color: #f59a57;
+  color: #8ac44a;
 }
 
 .discount-badge {
   position: absolute;
   top: 10px;
   left: 10px;
-  background: #f59a57;
+  background: #8ac44a;
   color: white;
   font-size: 12px;
   padding: 4px 8px;
@@ -233,7 +233,7 @@ body {
 }
 
 .card-button {
-  background-color: #f59a57;
+  background-color: #8ac44a;
   color: white;
   border: none;
   transition: background-color 0.3s ease;
@@ -252,7 +252,7 @@ body {
 
 .testimonial-card {
   background: #f1f5f7;
-  border-left: 5px solid #ffb703;
+  border-left: 5px solid #8ac44a;
   transition: transform 0.3s ease;
 }
 
@@ -263,8 +263,8 @@ body {
 .swiper-button-next,
 .swiper-button-prev {
   background-color: transparent;
-  border: 1px solid #ffb703;
-  color: #ffb703;
+  border: 1px solid #8ac44a;
+  color: #8ac44a;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -272,7 +272,7 @@ body {
 
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
-  background-color: #ffb703;
+  background-color: #8ac44a;
   color: white;
 }
 
@@ -289,7 +289,7 @@ body {
   z-index: 10;
   width: 45px;
   height: 45px;
-  border: 2px solid #ff7d03;
+  border: 2px solid #8ac44a;
   border-radius: 50%;
   background-color: #fff;
   color: #333;
@@ -302,7 +302,7 @@ body {
 
 .swiper-button-prev-custom:hover,
 .swiper-button-next-custom:hover {
-  background-color: #ffb703;
+  background-color: #8ac44a;
   color: #fff;
   transform: translateY(-50%) scale(1.1);
 }
@@ -453,12 +453,12 @@ body {
 }
 
 .btn-custom{
-  background-color:#ff7d03;
-  border-color:#ff7d03 ;
+  background-color:#8ac44a;
+  border-color:#8ac44a ;
 }
 
 .icon-custom{
-  color: #ff7d03;
+  color: #8ac44a;
 }
 
 .detail-text{
